@startuml
'https://plantuml.com/class-diagram

skinparam enumFontColour Blue

' ============================ AUX ============================

class Verdict {
    +str msg
    +int test_number

    +void __init__(...)
}
note left of Verdict::__init__
Here and further,
_ _init_ _'s signature
will be omitted
as it simply
initializes attributes
end note


class UserSubmittedData {
    +Path path_to_src
    +int submission_id

    +void __init__(...)
}

skinparam enum {
    BackGroundColor Aqua
}

enum LanguageLabel {
    CXX
    CXX11
    CXX14
    CXX17
    CXX20

    PYTHON3

    HASKELL2010

    JAVA
    SCALA
}

class LanguageLabelHolder {
    +bool is_super_label_of(LanguageLabelHolder)
}

LanguageLabelHolder "1" <-- "1" LanguageLabel
LanguageLabelHolder <|-- UserSubmittedData



class LanguageData {
    +void __init__(...)
    +int convert_to_executable(path_to_src, non_colliding_exec_name, conversion_opts)
    +bool is_compatible_with(user_submitted_data)
}
LanguageLabelHolder <|--- LanguageData

class CXXDataSet {
    +set data_set
}

CXXDataSet "1" <-- "+1..*" LanguageData

class HaskellDataSet {
    +set data_set
}

HaskellDataSet "1" <-- "+1..*" LanguageData

class PythonDataSet {
    +set data_set
}

PythonDataSet "1" <-- "+1..*" LanguageData

class JavaDataSet {
    +set data_set
}

JavaDataSet "1" <-- "+1..*" LanguageData

class ScalaDataSet {
    +set data_set
}

ScalaDataSet "1" <-- "+1..*" LanguageData


class ExecutionAndConversionData {
    -list conversion_opts_lst
    -list command_line_opts_lst

    +void __init__(...)
}

ExecutionAndConversionData "1" <--- "1 language_data" LanguageData
TestingProtocols "1" <--- "-1..* execution_and_conversion_data_set" ExecutionAndConversionData

' ========================== PROTOCOLS =========================

abstract class TestingProtocols {
    -{static} dict return_code_to_error_msg = ...

    +void __init__(...)
    +Verdict check(self, user_submitted_data)
    -ExecutionAndConversionData choose_language_data(self, user_submitted_data)
    -{abstract} Verdict check_with_chosen_language_data(self, user_submitted_data)
    -{static} int run_code(path_to_executable, path_to_input_file, path_to_output_file, command_line_opts))
    -{static} Path prevent_path_collision(initial_number, get_path)
    -{static} Path generate_output_path(submission_id)
    -{static} Path generate_exec_path(submission_id)
}

class InputOutput {
    -dict input_output_paths_dict

    +void __init__(...)
    -{static} bool equal_files(path_to_solution_output, path_to_correct_output)
    -{static} void truncate_terminating_newline_if_necessary(path_to_file)
}

class InputCustomChecker {
    -set input_paths_set
    -Path path_to_checker_exec

    +void __init__(...)
    -bool passes_custom_checker(self, path_to_input_file, path_to_solution_output)
}

class RandomInputCustomChecker {
    -int test_count
    -Path path_to_input_generation_exec
    -Path path_to_checker_exec


    +void __init__(...)
    -{static} Path generate_input_dir(submission_id)
    -set generate_input(self, submission_id)
}

class LimitedWorkSpace {
    -Path path_to_header
    -Path path_to_footer
    -str extension

    +void __init__(...)
    -Path generate_merged_path(self, submission_id)
    -{static} Path generate_unit_file()
    -Path generate_merged(self, user_submitted_data)
}


TestingProtocols <|--- InputCustomChecker
TestingProtocols <|--- RandomInputCustomChecker
TestingProtocols <|--- LimitedWorkSpace
TestingProtocols <|--- InputOutput


' ============================ AUX ============================

class ProblemData {
    +int problem_id
    +set testing_protocols_set

    +void __init__(...)
}

ProblemData "1" <-- "testing_protocols_set 1..*" TestingProtocols


class ExtendedSubmission {
    +void __init__(...)
}

ExtendedSubmission "1" *-- "+problem_data 1" ProblemData
ExtendedSubmission "1" *--- "+user_submitted_ data1" UserSubmittedData

@enduml